// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBody message by other user should return the match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MessageBody
    isSelf={false}
    username="tom"
>
    <h1>
        hello
    </h1>
</MessageBody>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="px-2 py-1"
>
        <div
                className="arrow"
        />
        <h6
                className="text-capitalize text-info"
        >
                tom
        </h6>
        <div>
                <h1>
                        hello
                </h1>
        </div>
</div>,
      "className": "message-body popover bs-popover-right",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="arrow"
/>,
          <h6
            className="text-capitalize text-info"
>
            tom
</h6>,
          <div>
            <h1>
                        hello
            </h1>
</div>,
        ],
        "className": "px-2 py-1",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "arrow",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "tom",
            "className": "text-capitalize text-info",
          },
          "ref": null,
          "rendered": "tom",
          "type": "h6",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h1>
              hello
</h1>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "hello",
            },
            "ref": null,
            "rendered": "hello",
            "type": "h1",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="px-2 py-1"
>
          <div
                    className="arrow"
          />
          <h6
                    className="text-capitalize text-info"
          >
                    tom
          </h6>
          <div>
                    <h1>
                              hello
                    </h1>
          </div>
</div>,
        "className": "message-body popover bs-popover-right",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="arrow"
/>,
            <h6
              className="text-capitalize text-info"
>
              tom
</h6>,
            <div>
              <h1>
                            hello
              </h1>
</div>,
          ],
          "className": "px-2 py-1",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "arrow",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "tom",
              "className": "text-capitalize text-info",
            },
            "ref": null,
            "rendered": "tom",
            "type": "h6",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h1>
                hello
</h1>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "hello",
              },
              "ref": null,
              "rendered": "hello",
              "type": "h1",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MessageBody message by the current user should return the match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MessageBody
    isSelf={true}
    username="tom"
>
    <h1>
        hello
    </h1>
</MessageBody>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="px-2 py-1"
>
        <div
                className="arrow"
        />
        <h6
                className="text-capitalize text-info"
        >
                Me
        </h6>
        <div>
                <h1>
                        hello
                </h1>
        </div>
</div>,
      "className": "message-body my-message popover bs-popover-left",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="arrow"
/>,
          <h6
            className="text-capitalize text-info"
>
            Me
</h6>,
          <div>
            <h1>
                        hello
            </h1>
</div>,
        ],
        "className": "px-2 py-1",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "arrow",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Me",
            "className": "text-capitalize text-info",
          },
          "ref": null,
          "rendered": "Me",
          "type": "h6",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h1>
              hello
</h1>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "hello",
            },
            "ref": null,
            "rendered": "hello",
            "type": "h1",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="px-2 py-1"
>
          <div
                    className="arrow"
          />
          <h6
                    className="text-capitalize text-info"
          >
                    Me
          </h6>
          <div>
                    <h1>
                              hello
                    </h1>
          </div>
</div>,
        "className": "message-body my-message popover bs-popover-left",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="arrow"
/>,
            <h6
              className="text-capitalize text-info"
>
              Me
</h6>,
            <div>
              <h1>
                            hello
              </h1>
</div>,
          ],
          "className": "px-2 py-1",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "arrow",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Me",
              "className": "text-capitalize text-info",
            },
            "ref": null,
            "rendered": "Me",
            "type": "h6",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h1>
                hello
</h1>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "hello",
              },
              "ref": null,
              "rendered": "hello",
              "type": "h1",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
